--- a/Find and Play Applause.ipynb
+++ b/Find and Play Applause.ipynb
@@ -59,7 +59,7 @@
     "# Classifies audio at 1-second resolution, plots results if applause found, \n",
     "# and returns applause ranges as list of 2-tuples.\n",
     "# Add 1 to 2nd value in each 2-tuple for inclusive time span.\n",
-    "def find_sound(audio_path):\n",
+    "def classify(audio_path):\n",
     "    classifier_model_path = \"data/svm_applause_model\" # Or replace with another scikit-learn model\n",
     "    is_mp3=False\n",
     "    if (((audio_path.lower()[:8]=='https://') | (audio_path.lower()[:7]=='http://')) & (audio_path.lower()[-4:]=='.mp3')):\n",
@@ -173,7 +173,7 @@
    "source": [
     "url=\"http://media.sas.upenn.edu/pennsound/authors/Baraka/SFSU-1965/Baraka-Amiri_06_Poem-for-Half-White_SFSU_3-4-65.mp3\"\n",
     "\n",
-    "find_sound(url)"
+    "classify(url)"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "source": [
     "pathname=\"/path/to/local_file.mp3\"\n",
     "\n",
-    "find_sound(pathname)"
+    "classify(pathname)"
    ]
   }
  ],
