--- a/scripts/data/Classify_and_Play.ipynb
+++ b/scripts/data/Classify_and_Play.ipynb
@@ -24,7 +24,7 @@
     "import requests\n",
     "%matplotlib inline\n",
     "\n",
-    "# os.chdir('/path/to/audio-tagging-toolkit/')   ## Use if necessary."
+    "# os.chdir('/path/to/audio-tagging-toolkit/')   ## Change directory if necessary."
    ]
   },
   {
@@ -35,8 +35,8 @@
    },
    "outputs": [],
    "source": [
-    "# Takes list of 1-second segments classified as applause (1.0) or \n",
-    "# non-applause (0.0) and returns list of 2-tuples specifying applause ranges.\n",
+    "# Takes list of 1-second segments classified as class 1 or \n",
+    "# class 2 and returns list of 2-tuples specifying class 1 ranges.\n",
     "# Add 1 to 2nd value in each 2-tuple for inclusive time span.\n",
     "def seconds_list_to_ranges(seconds_list): \n",
     "    ranges = []                \n",
@@ -56,11 +56,11 @@
     "    numeric_array = array.array(array_type, clip_data._data)\n",
     "    display(Audio(numeric_array, rate=track_data.frame_rate))\n",
     "\n",
-    "# Classifies audio at 1-second resolution, plots results if applause found, \n",
-    "# and returns applause ranges as list of 2-tuples.\n",
+    "# Classifies audio at 1-second resolution, plots results if class 1 found, \n",
+    "# and returns class 1 ranges as list of 2-tuples.\n",
     "# Add 1 to 2nd value in each 2-tuple for inclusive time span.\n",
     "def classify(audio_path):\n",
-    "    classifier_model_path = \"data/svm_applause_model\" # Or replace with another scikit-learn model\n",
+    "    classifier_model_path = \"models/svm_applause_model\" # Or replace with another scikit-learn model\n",
     "    is_mp3=False\n",
     "    if (((audio_path.lower()[:8]=='https://') | (audio_path.lower()[:7]=='http://')) & (audio_path.lower()[-4:]=='.mp3')):\n",
     "        is_mp3=True\n",
@@ -83,23 +83,23 @@
     "    output, classesAll, acc, CM = aS.mtFileClassification(wav_path, classifier_model_path, \"svm\")\n",
     "    output = list(output)\n",
     "    counter=0\n",
-    "    applause_secs=[]\n",
+    "    class_1_secs=[]\n",
     "    for value in output:\n",
     "        if value>0.0:\n",
-    "            applause_secs.append(counter)\n",
+    "            class_1_secs.append(counter)\n",
     "        counter+=1\n",
-    "    applause_ranges=seconds_list_to_ranges(applause_secs)\n",
-    "    if len(applause_ranges)>0:\n",
-    "        print applause_ranges\n",
+    "    class_1_ranges=seconds_list_to_ranges(class_1_secs)\n",
+    "    if len(class_1_ranges)>0:\n",
+    "        print class_1_ranges\n",
     "        print '\\n'\n",
     "        pd.Series(output).plot()\n",
     "        plt.show()\n",
-    "    for pair in applause_ranges:\n",
+    "    for pair in class_1_ranges:\n",
     "        print pair\n",
     "        display_clip(wav_path,pair[0],pair[1]+1)\n",
     "    if is_mp3==True:\n",
     "        os.remove(wav_path)\n",
-    "    return applause_ranges"
+    "    return class_1_ranges"
    ]
   },
   {
